# pii-anonymizer-service

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  azuredeploy.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-button.yml
backend/: __init__.py
backend/src/: __init__.py  cli.py  database.py  logging_config.py
backend/src/api/: main.py  schemas.py
backend/src/api/middleware/: error_handler.py
backend/src/api/routes/: anonymize.py  config.py  health.py  mappings.py  stats.py
backend/src/generators/: __init__.py  synthetic.py
backend/src/models/: __init__.py  audit_log.py  config.py  entity_type_config.py  pii_mapping.py
backend/src/services/: anonymizer.py  config_service.py  detector.py  mapping_store.py  stats_service.py
backend/src/services/operators/: __init__.py  consistent_replace.py  hash.py  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: AnonymizePage.tsx  ConfigPage.tsx  MappingsPage.tsx  StatsPage.tsx
frontend/src/services/: api.ts
scripts/: README.md  build.sh  compare_logs.py  dump_and_anonymize.py  requirements.txt
scripts/data/: SigninLogs.json  SigninLogs_clean.json  SigninLogs_diff.md
specs/001-presidio-pii-anonymizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-presidio-pii-anonymizer/checklists/: requirements.md
specs/001-presidio-pii-anonymizer/contracts/: api.yaml
static/: index.html
static/assets/: index-CyDLf8-P.css  index-D6iEfoRB.js
